Update `lombok`